# rohand_urdf_ros1

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: display_l.launch  display_r.launch
meshes_l/: base_link.STL  if_distal_link.STL  if_slider_abpart_link.STL  lf_connecting_link.STL  lf_distal_link.STL  lf_slider_abpart_link.STL  lf_slider_link.STL  mf_distal_link.STL  mf_slider_abpart_link.STL  rf_distal_link.STL  rf_slider_abpart_link.STL  th_connecting_link.STL  th_distal_link.STL  th_proximal_link.STL
meshes_r/: base_link.STL  if_connecting_link.STL  if_distal_link.STL  if_proximal_link.STL  if_slider_abpart_link.STL  if_slider_link.STL  lf_connecting_link.STL  lf_distal_link.STL  lf_proximal_link.STL  lf_slider_abpart_link.STL  lf_slider_link.STL  mf_connecting_link.STL  mf_distal_link.STL  mf_proximal_link.STL  mf_slider_abpart_link.STL  mf_slider_link.STL  rf_connecting_link.STL  rf_distal_link.STL  rf_proximal_link.STL  rf_slider_abpart_link.STL  rf_slider_link.STL  th_connecting_link.STL  th_distal_link.STL  th_proximal_link.STL  th_root_link.STL  th_slider_link.STL
rviz/: urdf_l.rviz  urdf_r.rviz
scripts/: FingerMathURDF.py  rohand_joint_state_gui.py  rohand_urdf.py
urdf/: rohand_left.csv  rohand_left.urdf  rohand_right.csv  rohand_right.urdf
