<package format="2">
  <name>rohand_urdf_ros1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for rohand_urdf_ros1</p>
    <p>This package contains configuration data, 3D models and launch files
for rohand_urdf_ros1 robot</p>
  </description>
  <author>He Bin</author>
  <maintainer email="hebin7611@hotmail.com" />
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rospy</depend>
  <depend>urdf_parser_py</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <architecture_independent />
  </export>
</package>
